# yaml_struct

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: struct_yaml.h
test/: parseyaml_test.cpp  test.cc
